fixed scrollbars visible through modals

--- a/src/style.scss
+++ b/src/style.scss
@@ -383,6 +383,7 @@ ul.experiment-icons-list {
 	overflow-x: auto;
 	height: 100%;
 	padding-left: 0;
+	z-index: 0;
 }
 
 .experiments-list-wrapper,
